# plyx

./: .gitignore  Cargo.toml  Dockerfile  buildfontlist.sh  fontlist.json  ply_bundle_1.0.js  ply_bundle_1.1.js
src/: fonts.rs  main.rs  templates.rs  tui.rs
src/commands/: add.rs  apk.rs  completions.rs  easter_egg.rs  help.rs  init.rs  ios.rs  mod.rs  web.rs
