[package]
name = "plyx"
version = "0.1.0"
edition = "2021"
description = "CLI companion for ply-engine: scaffold projects, manage fonts, build Android APKs & WASM bundles."
keywords = ["ply", "cli", "scaffold", "android", "wasm"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29.0"
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.23.9"
