[package]
name = "plyx"
version = "0.1.8"
edition = "2021"
description = "CLI companion for ply-engine: scaffold projects, manage fonts, build Android APKs & WASM bundles."
keywords = ["ply", "cli", "scaffold", "android", "wasm"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/TheRedDeveloper/plyx"
homepage = "https://plyx.iz.rs"
readme = "README.md"
license = "0BSD"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29.0"
ureq = { version = "3", features = ["platform-verifier"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.23.9"
